--- a/src/app.html
+++ b/src/app.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html lang="en" data-theme="light"></html>
+<html data-theme="light" lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="manifest" href="/manifest.json" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
