--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,19 @@
 		<link rel="manifest" href="/manifest.json" />
 		%sveltekit.head%
 	</head>
+
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
+
+	<script>
+		function loadTheme() {
+			const savedTheme = localStorage.getItem('theme');
+			if (savedTheme) {
+				document.documentElement.setAttribute('data-theme', savedTheme);
+			}
+		}
+
+		loadTheme();
+	</script>
 </html>
